--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Catch Me </title>
+    <title>Catch Me If You Can</title>
   </head>
   <body>
     <div id="root"></div>
