stylized fonts and dashboard

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Catch Me If You Can</title>
   </head>
-  <body>
+  <body class='body'>
     <div id="root"></div>
   </body>
 </html>
