--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="title" property="og:title" content="Catch Me If You Can" />
+    <meta property="og:type" content="Website" />
+    <meta name="image" property="og:image" content="https://live.staticflickr.com/65535/50971055507_9e8c4e8eea_n.jpg" />
+    <meta name="description" property="og:description" content="Catch Me If You Can is a fun, competitive app that lets you create and track routes that you've walked, biked or ran. Add friends ('rivals') and they can track their own times on your route. Each route has a leaderboard to see who has the fastest time!" />
+    <meta name="author" content="Rhys Previte Kyle Barthelmes Aaron Hanson Nick Richard" />
     <title>Catch Me If You Can</title>
   </head>
   <body class='body'>
